# solforge-casestudy

./: .gitignore  Cargo.toml  README.md  delete_mongo.sh  run_aggregator.sh  start_aggregator.sh  start_mongo.sh  start_server.sh
aggregator/: Cargo.toml
aggregator/src/: main.rs
config/: config.aggregator.example.sh  config.example.sh  config.server.example.sh
db/: docker-compose.yaml
server/: Cargo.toml
server/src/: handlers.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
