[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
solana-client = "2.0.3"
solana-transaction-status = "2.0.3"
tokio = { version = "1.39.2", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.22"
serde_json = "1.0.121"
mongodb = "3.0.1"
serde = "1.0.204"
futures = "0.3.30"
chrono = "0.4.38"
rand = "0.8.5"
